--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
-    "react-autocomplete": "^1.8.1",
     "react-dom": "^16.7.0",
+    "react-js-pagination": "^3.0.2",
     "react-scripts": "2.1.3"
   },
   "scripts": {
